--- a/Chapter_BrownianMotion.qmd
+++ b/Chapter_BrownianMotion.qmd
@@ -186,7 +186,7 @@ Thus, among continuous martingales, a Brownian motion is distinguished by the co
 ## Correlation of Brownian Motions {#sec-s:correlation}
 
 Consider two standard Brownian motions $B_1$ and $B_2$.
-The relation between the two Brownian motions is determined by their covariance or correlation.  Given dates $s<t$, we know that both changes $B_{1t}-B_{1s}$ and $B_{2t}-B_{2s}$ are normally distributed with zero mean and variance equal to $t-s$, given information at date $s$.  There is a stochastic process $\rho$ such that the covariance \index{covariance} of these two normally distributed random variables, given the information at date $s$, is 
+The relation between the two Brownian motions is determined by their covariance or correlation.  Given dates $s<t$, we know that both changes $B_{1t}-B_{1s}$ and $B_{2t}-B_{2s}$ are normally distributed with zero mean and variance equal to $t-s$, given information at date $s$.  There is a stochastic process $\rho$ such that the covariance \index{covariance} of these two normally distributed random variables, given the information at date $s$, is^[The symbol $\mathbb{E} denotes the expectation (mean) of any random variable.] 
 $$\mathbb{E}_s \left[\int_s^t \rho_u\mathrm{d}   u\right]\; .$$
 The process $\rho$ is called the correlation process of the two Brownian motions. \index{correlation coefficient} The correlation of the changes $B_{1t}-B_{1s}$ and $B_{2t}-B_{2s}$, given information at date $s$, is
 $$\frac{\text{covariance}}{\text{product of standard deviations}}  = \frac{\mathbb{E}_s\int_s^t \rho_u \mathrm{d}   u}{\sqrt{t-s} \sqrt{t-s}} = \frac{1}{t-s}\mathbb{E}_s\int_s^t \rho_u \mathrm{d}   u\; .$$
